test/test_11912921_8.out
Error type 6 at Line 5: rvalue appears on the left-hand side of the assignment operator: 
Error type 11 at Line 5: invoking non-function variable: var
