test/test_11912921_8.spl
int test_8()
{
    int var = 30;
    float f = 3.2;
    var(33) = f;
}